--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,21 +1,26 @@
-//===============================================================================
+//=======================================================
 // IMPORTS
-//===============================================================================
+//=======================================================
 // normalize.css v3.0.0 | MIT License | git.io/normalize
 @import "_normalize.scss";
 
 // define mixins & functions
 @import "_mixins.scss";
 
-//===============================================================================
+//=======================================================
 // VARIABLES
-//===============================================================================
-$paper:  white;
-$ink:    black;
+//=======================================================
+$paper:  hsl( 145, 65, 50 );
+$ink:    white;
 
-//===============================================================================
+$chart-width: 800px;
+$chart-height: 500px;
+
+$axis-height: 100px;
+
+//=======================================================
 // BASCIS
-//===============================================================================
+//=======================================================
 *,
 *::before,
 *:after {
@@ -31,10 +36,25 @@ html,
 body {
   background-color: $paper;
   color: $ink;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 1.4;
+  font-weight: 100;
 }
 
-//===============================================================================
+h1, h2, h3, h4, h5, h6,
+b,
+strong {
+  font-weight: 400;
+}
+
+//=======================================================
 // STYLES
-//===============================================================================
+//=======================================================
+// header styles
+@import "_header.scss";
+
+// chart styles
+@import "_chart.scss";
+
+// sliders styles
+@import "_sliders.scss";
