--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -4,6 +4,7 @@
 .site-header {
   @include clearfix;
 
+  height: 4.5rem;
   padding: 0 1rem;
   border-bottom: 2px solid rgba( $ink, 0.75 );
 }
@@ -11,7 +12,7 @@
 .site-title,
 .site-subtitle {
   float: left;
-  line-height: 2rem;
+  line-height: ( 4.5rem / 2 );
   margin: 1rem 0;
 }
 
@@ -22,4 +23,10 @@
 .site-subtitle {
   font-weight: 100;
   margin-left: 0.5rem;
+}
+
+.tesco-logo {
+  float: right;
+  height: 2.6rem;
+  margin: 1.1rem 0;
 }
