--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -4,15 +4,14 @@
 .site-header {
   @include clearfix;
 
-  height: 4.5rem;
   padding: 0 1rem;
-  border-bottom: 2px solid rgba( $ink, 0.75 );
+  border-bottom: 2px solid $primary;
 }
 
 .site-title,
 .site-subtitle {
   float: left;
-  line-height: ( 4.5rem / 2 );
+  line-height: 3rem;
   margin: 1rem 0;
 }
 
