--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -60,7 +60,7 @@ strong {
   @include clearfix;
 
   width: 1060px;
-  margin: 0 auto;
+  margin: 2rem auto 0;
 }
 
 //=======================================================
