--- a/src/sass/_homepage.scss
+++ b/src/sass/_homepage.scss
@@ -103,11 +103,38 @@
 
 .pitch-content {
   padding: 2rem 3rem;
+  font-size: 1.1rem;
+
+  ul {
+    width: 50%;
+    float: left;
+    padding-left: 1.2rem;
+
+    &.full {
+      width: 100%;
+    }
+  }
+
+  span {
+    font-weight: 400;
+    margin-left: -1.2rem;
+    margin-bottom: 0.25rem;
+  }
 
   li {
     list-style: disc;
     color: $primary;
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.25rem;
   }
+
+  p {
+    width: 100%;
+    clear: both;
+  }
+}
+
+iframe {
+  margin: 0 auto;
+  display: block;
+  width: 100%;
 }
